# SmartPath-Navigator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
algorithms/: AStar.cpp  AStar.h  Dijkstra.cpp  Dijkstra.h
graph/: Graph.cpp  Graph.h  Node.cpp  Node.h
osm/: OSMParser.cpp  OSMParser.h
widgets/: MapWidget.cpp  MapWidget.h
